SERVER-92309 Fix missing condition variable notifications in OplogBufferBlockingQueue::tryPop(). (#24561)

GitOrigin-RevId: c454d27f85edb61cd3d0be0300564bc34aeaa636